--- a/Yeongdeungpo2024-07_javascript/index.html
+++ b/Yeongdeungpo2024-07_javascript/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>자바스크립트 기초</title>
-    <script defer src="js/10_dialog.js"></script>
+    <script defer src="./js/07_dom.js"></script>
   </head>
   <body>
-    <button>팝업열기</button>
-    <dialog>팝업입니다.</dialog>
+    <button class="start">시작</button>
+    <br />
+    <br />
+    <button class="stop">정지</button>
   </body>
 </html>
